eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/HPPStatusFigures__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>NumberOfClosedOpportunities__c</fullName>
        <label>Number of Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfOpportunities__c</fullName>
        <description>The number of opportunities which have at some stage had this status.</description>
        <inlineHelpText>The number of opportunities which have at some stage had this status.</inlineHelpText>
        <label>Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfWonOpportunities__c</fullName>
        <description>The number of opportunities which have at some stage had this status and have been closed won.</description>
        <inlineHelpText>The number of opportunities which have at some stage had this status and have been closed won.</inlineHelpText>
        <label>Number of Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfWonOppsWithCompletedDate__c</fullName>
        <label>Number of Won Opps with Completed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status/stage.</description>
        <inlineHelpText>The status/stage.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfOpportunities__c</fullName>
        <description>The total number of opportunities in Salesforce when the script was run.</description>
        <inlineHelpText>The total number of opportunities in Salesforce when the script was run.</inlineHelpText>
        <label>Total Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalStatusAgeToWon__c</fullName>
        <description>The total number of days between this stage and closed won, for all opportunities which have been at this stage and have been set to closed won.</description>
        <inlineHelpText>The total number of days between this stage and closed won, for all opportunities which have been at this stage and have been set to closed won.</inlineHelpText>
        <label>Total Status Age to Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HPP Status Figures</label>
</CustomObject>